<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>descartes_core</name>
  <version>0.0.1</version>
  <description>The descartes_core package creates joint trajectories for trajectory plans. Trajectory plans are typically underdefined paths through space that allow for kinematic/dynamic tolerances, such as unspecified tool roll.</description>

  <maintainer email="jnicho@swri.org">Jorge Nicho</maintainer>
  <maintainer email="jonathan.meyer@swri.org">Jonathan Meyer</maintainer>
  <maintainer email="sedwards@swri.org">Shaun Edwards</maintainer>

  <license>Apache2.0</license>
  <url type="website">https://github.com/industrial-moveit/descartes_core</url>

  <author email="dpsolomon@gmail.com">Dan Solomon</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <test_depend>rosunit</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
  </export>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
