<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>descartes_planner</name>
  <version>0.0.1</version>
  <description>The descartes_planner package</description>

  <maintainer email="jnicho@swri.org">Jorge Nicho</maintainer>
  <maintainer email="jonathan.meyer@swri.org">Jonathan Meyer</maintainer>
  <maintainer email="sedwards@swri.org">Shaun Edwards</maintainer>

  <license>Apache2.0</license>

  <author email="jnicho@swri.org">Jorge Nicho</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>descartes_core</build_depend>
  <build_depend>descartes_trajectory</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>descartes_core</exec_depend>
  <exec_depend>descartes_trajectory</exec_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <export>
    <descartes_core plugin="${prefix}/descartes_planner_plugins.xml" />
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
  </export>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
