<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>descartes_utilities</name>
  <version>0.0.1</version>
  <description>
    This package contains helper routines for working with the Descartes motion planning library
    that ease practical use, but do fit cleanly into the core library. This includes conversions
    to ROS trajectories, and similar operations.
  </description>

  <maintainer email="Jmeyer@swri.org">Jonathan Meyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>descartes_core</build_depend>
  <build_depend>descartes_trajectory</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  
  <exec_depend>descartes_core</exec_depend>
  <exec_depend>descartes_trajectory</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
